# xtp_api_python

./: README.md  XTP的API在python下的封装说明文档.docx  boost.python编译说明.docx  changelist.txt  version.txt
XTP_API_1.1.19.2_20190627/demo/: demo编译相关问题.doc  使用cmake生成demo工程文件.doc
XTP_API_1.1.19.2_20190627/doc/: XTP API常见问题.doc  XTP QuoteAPI使用UDP常见问题.doc  XTP模拟测试环境常见问题.doc  XTP错误代码速查表.doc
XTP_API_20180516_1.1.18.13/demo/: Demo测试账号配置.doc  demo编译相关问题.doc  使用cmake生成demo工程文件.doc
XTP_API_20180516_1.1.18.13/doc/: XTP API常见问题.doc  XTP错误代码速查表.doc
XTP_API_20190401_1.1.18.19/: changelist.txt
XTP_API_20190401_1.1.18.19/demo/XTPApiDemo-1.1.18.19/XTPApiDemo-1.1.18.19/src/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  quote_spi.cpp  quote_spi.h  trade_spi.cpp  trade_spi.h  xtp_api_demo.cpp
XTP_API_20190401_1.1.18.19/doc/: XTP API常见问题.doc  XTP错误代码速查表.doc
XTP_API_20200824_2.2.25.5/: changelist.txt
XTP_API_20200824_2.2.25.5/doc/: XTP API常见问题.doc  XTP交易业务报单接口及参数说明.doc  XTP错误代码速查表.doc
XTP_API_20210719_2.2.30.7/: changelist.txt
XTP_API_20210719_2.2.30.7/demo/: 使用cmake生成demo工程文件.doc
XTP_API_20210719_2.2.30.7/doc/: XTP QuoteAPI使用UDP常见问题.doc  XTP错误代码速查表.doc
XTP_API_20220402_2.2.33.5/: changelist.txt
XTP_API_20220402_2.2.33.5/doc/: XTP API常见问题.doc  XTP交易业务报单接口及参数说明.doc  (+5 more)
XTP_API_20231222_2.2.39.3/: changelist.txt
XTP_API_20240611_2.2.42.1/: changelist.txt
XTP_API_20250806_2.2.50.8/: changelist.txt
doc/: Linux+boost+python3+gcc编译说明文档.docx  boost.python编译说明.docx  inttypes.h  vs工程搭建.docx  win7+boost+python3+vs2010编译说明文档.docx
test/: quotetest.py  tradertest.py
vs2015运行库/: 说明.txt
(+106 files in other folders)
